--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,17 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+[Uu]ser[Ss]ettings/
+/[Bb]uild/
+/[Bb]uilds/
+
 # file on crash reports
 sysinfo.txt
+
 # Unity3D generated meta files
 *.pidb.meta
+*.pdb.meta
+*.mdb.meta
 
 ###
 # VS/MD solution and project files
@@ -39,3 +46,17 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+
+# Builds
+*.apk
+*.unitypackage
+
+# Crashlytics generated file
+crashlytics-build.properties
+
+# Packed Addressables
+/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# Temporary auto-generated Android Assets
+/[Aa]ssets/[Ss]treamingAssets/aa.meta
+/[Aa]ssets/[Ss]treamingAssets/aa/*
