Score and basic game controller (#4)
* Force new Branch for Team Score

* Ignore .vs folder

* Update .gitignore

added TextMesh Pro to gitignore

* added UI canvases (InGameUI, StartUI, RestartUI)

* updated UI canvas with text and buttons

* added inGameView controller

- renamed UI to View
- added inGameView controller to  to inGameView GameOjbect

* Added Game Controller, Timer and basic scoring controller

* Updated game controller

* added prefabs, initialized GameController with UI Texts

- made prefab for UI and HighscoreList

* Update

* Update

* Added basic test script

* added UiController, moved state logic

* update

* Updated controller and scene

* Added folders for each teams scripts

* scene update

* Moved script to script folder and reorganized prefab

* Script Preparations for highscore

* updated prefabs

* Fixed bug: concurrency issue of high-score

* Revert "updated prefabs"

This reverts commit 0301a2d8

* Added ReShaper inspect ignores

* Added main scene for all teams

* added pause

* Added pause buttons and refactored paths of folders

* Add meta file

Co-authored-by: emabee1 <emanuel.beer@students.fhv.at>

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@
 [Uu]nityGenerated/
 [Uu]ser[Ss]ettings/
 [Bb]uilds/
+[Tt]extMesh\ Pro
 
 
 # file on crash reports
 sysinfo.txt
 
 # Unity3D generated meta files
-GitHub.meta
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
@@ -36,6 +36,7 @@ GitHub.meta
 *.userprefs
 *.pidb
 .DS_Store
+.vs
 
 ###
 # OS generated
