added .idea to gitignore
- removed .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ sysinfo.txt
 .vs
 
 ###
+# IntelliJ
+###
+.idea
+
+###
 # OS generated
 ###
 .DS_Store
@@ -63,3 +68,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+#Game
+save.txt
