--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.arcore": "3.1.3",
     "com.unity.xr.management": "3.2.10",
     "com.unity.xr.mock-hmd": "1.0.1-preview.7",
     "com.unity.xr.oculus": "1.3.4",
